# opencv-template

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp
